website/versioned_docs/version-2.13.x/reference/goals/test.mdx
---
title: test
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

```
pants test [args]
```

Run tests.

Backend: <span className="color--primary">`pants.core`</span>

Config section: <span className="color--primary">`[test]`</span>

<span className={styles.options}>

## Basic options

### `debug`

<Option
  cli_repr={`--[no-]test-debug`}
  env_repr="PANTS_TEST_DEBUG"
  default_repr={`False`}
>
  Run tests sequentially in an interactive process. This is necessary, for
  example, when you add breakpoints to your code.
</Option>

### `debug_adapter`

<Option
  cli_repr={`--[no-]test-debug-adapter`}
  env_repr='PANTS_TEST_DEBUG_ADAPTER'
  default_repr={`False`}
>
Run tests sequentially in an interactive process, using a Debug Adapter (https://microsoft.github.io/debug-adapter-protocol/) for the language if supported.

The interactive process used will be immediately blocked waiting for a client before continuing.

This option implies --debug.

</Option>

### `force`

<Option
  cli_repr={`--[no-]test-force`}
  env_repr="PANTS_TEST_FORCE"
  default_repr={`False`}
>
  Force the tests to run, even if they could be satisfied from cache.
</Option>

### `output`

<Option
  cli_repr={`--test-output=<ShowOutput>`}
  env_repr="PANTS_TEST_OUTPUT"
  one_of="all, failed, none"
  default_repr={`failed`}
>
  Show stdout/stderr for these tests.
</Option>

### `use_coverage`

<Option
  cli_repr={`--[no-]test-use-coverage`}
  env_repr="PANTS_TEST_USE_COVERAGE"
  default_repr={`False`}
>
  Generate a coverage report if the test runner supports it.
</Option>

### `open_coverage`

<Option
  cli_repr={`--[no-]test-open-coverage`}
  env_repr="PANTS_TEST_OPEN_COVERAGE"
  default_repr={`False`}
>
  If a coverage report file is generated, open it on the local system if the
  system supports this.
</Option>

### `extra_env_vars`

<Option
  cli_repr={`--test-extra-env-vars="['<str>', '<str>', ...]"`}
  env_repr="PANTS_TEST_EXTRA_ENV_VARS"
  default_repr={`[]`}
>
  Additional environment variables to include in test processes. Entries are
  strings in the form `ENV_VAR=value` to use explicitly; or just `ENV_VAR` to
  copy the value of a variable in Pants&#x27;s own environment.
</Option>

### `shard`

<Option
  cli_repr={`--test-shard=<str>`}
  env_repr='PANTS_TEST_SHARD'
  default_repr={``}
>
A shard specification of the form &quot;k/N&quot;, where N is a positive integer and k is a non-negative integer less than N.

If set, the request input targets will be deterministically partitioned into N disjoint subsets of roughly equal size, and only the k&#x27;th subset will be used, with all others discarded.

Useful for splitting large numbers of test files across multiple machines in CI. For example, you can run three shards with --shard=0/3, --shard=1/3, --shard=2/3.

Note that the shards are roughly equal in size as measured by number of files. No attempt is made to consider the size of different files, the time they have taken to run in the past, or other such sophisticated measures.

</Option>

## Advanced options

### `report`

<Option
  cli_repr={`--[no-]test-report`}
  env_repr="PANTS_TEST_REPORT"
  default_repr={`False`}
>
  Write test reports to --report-dir.
</Option>

### `report_dir`

<Option
  cli_repr={`--test-report-dir=<str>`}
  env_repr="PANTS_TEST_REPORT_DIR"
  default_repr={`{distdir}/test/reports`}
>
  Path to write test reports to. Must be relative to the build root.
</Option>

## Deprecated options

None

## Related subsystems

- [debug-adapter](../subsystems/debug-adapter.mdx)
- [filter](../goals/filter.mdx)

</span>

