website/versioned_docs/version-2.14.x/reference/goals/test.mdx
---
title: test
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

```
pants test [args]
```

Run tests.

Backend: <span className="color--primary">`pants.core`</span>

Config section: <span className="color--primary">`[test]`</span>

<span className={styles.options}>

## Basic options

### `debug`

<Option
  cli_repr={`--[no-]test-debug`}
  env_repr="PANTS_TEST_DEBUG"
  default_repr={`False`}
>
  Run tests sequentially in an interactive process. This is necessary, for
  example, when you add breakpoints to your code.
</Option>

### `debug_adapter`

<Option
  cli_repr={`--[no-]test-debug-adapter`}
  env_repr='PANTS_TEST_DEBUG_ADAPTER'
  default_repr={`False`}
>
Run tests sequentially in an interactive process, using a Debug Adapter (https://microsoft.github.io/debug-adapter-protocol/) for the language if supported.

The interactive process used will be immediately blocked waiting for a client before continuing.

This option implies --debug.

</Option>

### `force`

<Option
  cli_repr={`--[no-]test-force`}
  env_repr="PANTS_TEST_FORCE"
  default_repr={`False`}
>
  Force the tests to run, even if they could be satisfied from cache.
</Option>

### `output`

<Option
  cli_repr={`--test-output=<ShowOutput>`}
  env_repr="PANTS_TEST_OUTPUT"
  one_of="all, failed, none"
  default_repr={`failed`}
>
  Show stdout/stderr for these tests.
</Option>

### `use_coverage`

<Option
  cli_repr={`--[no-]test-use-coverage`}
  env_repr="PANTS_TEST_USE_COVERAGE"
  default_repr={`False`}
>
  Generate a coverage report if the test runner supports it.
</Option>

### `open_coverage`

<Option
  cli_repr={`--[no-]test-open-coverage`}
  env_repr="PANTS_TEST_OPEN_COVERAGE"
  default_repr={`False`}
>
  If a coverage report file is generated, open it on the local system if the
  system supports this.
</Option>

### `extra_env_vars`

<Option
  cli_repr={`--test-extra-env-vars="['<str>', '<str>', ...]"`}
  env_repr="PANTS_TEST_EXTRA_ENV_VARS"
  default_repr={`[]`}
>
  Additional environment variables to include in test processes. Entries are
  strings in the form `ENV_VAR=value` to use explicitly; or just `ENV_VAR` to
  copy the value of a variable in Pants&#x27;s own environment.
</Option>

### `shard`

<Option
  cli_repr={`--test-shard=<str>`}
  env_repr='PANTS_TEST_SHARD'
  default_repr={``}
>
A shard specification of the form &quot;k/N&quot;, where N is a positive integer and k is a non-negative integer less than N.

If set, the request input targets will be deterministically partitioned into N disjoint subsets of roughly equal size, and only the k&#x27;th subset will be used, with all others discarded.

Useful for splitting large numbers of test files across multiple machines in CI. For example, you can run three shards with --shard=0/3, --shard=1/3, --shard=2/3.

Note that the shards are roughly equal in size as measured by number of files. No attempt is made to consider the size of different files, the time they have taken to run in the past, or other such sophisticated measures.

</Option>

### `timeouts`

<Option
  cli_repr={`--[no-]test-timeouts`}
  env_repr="PANTS_TEST_TIMEOUTS"
  default_repr={`True`}
>
  Enable test target timeouts. If timeouts are enabled then test targets with a
  `timeout=` parameter set on their target will time out after the given number
  of seconds if not completed. If no timeout is set, then either the default
  timeout is used or no timeout is configured.
</Option>

## Advanced options

### `report`

<Option
  cli_repr={`--[no-]test-report`}
  env_repr="PANTS_TEST_REPORT"
  default_repr={`False`}
>
  Write test reports to --report-dir.
</Option>

### `report_dir`

<Option
  cli_repr={`--test-report-dir=<str>`}
  env_repr="PANTS_TEST_REPORT_DIR"
  default_repr={`{distdir}/test/reports`}
>
  Path to write test reports to. Must be relative to the build root.
</Option>

### `timeout_default`

<Option
  cli_repr={`--test-timeout-default=<int>`}
  env_repr="PANTS_TEST_TIMEOUT_DEFAULT"
  default_repr={`None`}
>
  The default timeout (in seconds) for a test target if the `timeout` field is
  not set on the target.
</Option>

### `timeout_maximum`

<Option
  cli_repr={`--test-timeout-maximum=<int>`}
  env_repr="PANTS_TEST_TIMEOUT_MAXIMUM"
  default_repr={`None`}
>
  The maximum timeout (in seconds) that may be used on a test target.
</Option>

## Deprecated options

None

## Related subsystems

- [debug-adapter](../subsystems/debug-adapter.mdx)
- [filter](../subsystems/filter.mdx)

</span>

